portfolio-website/src/app/components/about-me/about-me.component.scss
@import "../../../assets/variables";

.about-me-page-container{
  background-color: $off-white;
  width: 100%;
  min-height: 100%;
  padding-top: 100px;
  display: flex;
  flex-direction: column;
  align-items: center;
  box-sizing: border-box;
}

//About me
.about-me-container{
  width: 100%;
  max-width: 1000px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  color: $faded-text-color;
  margin-bottom: 50px;
}

.about-me-message{
  flex: 1;
  min-width: 450px;
  padding: 10px;
}

.changing-word{
  color: $active-color;
  font-weight: bolder;
}

.personal-image{
  max-width: 100%;
  width: 300px;
  flex-shrink: 0;
}

.personal-image img{
  width: 100%;
  height: 100%;
}

//Skills
.skills-container{
  width: 100%;
  background-color: $primary-color;
  color: $off-white;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  padding-bottom: 50px;
  padding-top: 25px;
}

.skill-container-right{
  display: flex;
  flex-direction: column;
}

.other-container{
  margin-top: 15px;
}

.skills-body h5{
  margin-top: -10px;
}

.skills-body{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  padding: 5px;
}

.skills-body > div{
  margin-left: 20px;
  margin-right: 20px;
}

.skills-container span{
  border: 1px solid $off-white;
  padding: 5px 10px 5px 10px;
  margin: 10px 5px 10px 5px;
}

//Experience
.experience-container{
  width: 100%;
  display: flex;
  justify-content: center;
  box-sizing: border-box;
}

.job-skill-tags{
  color: #7b7b7b;
  font-size: 14px;
}

.job-header{
  display: flex;
  justify-content: space-between;
}

.divider{
   background-color: $active-color;
   height: 3px;
   width: 100%;
   margin-bottom: 15px;
 }

.experience-container{
  display: flex;
  flex-direction: column;
  align-items: center;
  color: $faded-text-color;
  background-color: $off-white;
  padding: 50px;
}

.experience-container h1{
  margin-top: 0;
}

.experience-container img{
  border-radius: 50%;
  height: 75px;
  width: 75px;
  margin-right: 20px;
}

.job-container{
  display: flex;
  flex-direction: row;
  max-width: 1000px;
  padding: 15px;
}

.job-description h4{
  color: $active-color;
  margin: 0;
}

.job-description h3{
  margin: 0;
}

//Resume
.resume-container{
  width: 100%;
  background-color: $primary-color;
  color: $off-white;
  font-size: 20px;
  padding: 25px;
  display: flex;
  justify-content: center;
  box-sizing: border-box;
}

//Education
.education-container{
  color: $faded-text-color;
  background-color: $off-white;
  padding: 50px;
  width: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  box-sizing: border-box;
}

.education-node-container{
  display: flex;
  flex-direction: row;
  max-width: 1000px;
  padding: 15px;
}

.education-container h1{
  margin-top: 0;
}

.education-container img{
  border-radius: 50%;
  height: 75px;
  margin-right: 20px;
}

.education-header{
  display: flex;
  justify-content: space-between;
}

.education-node-container h3, h4{
  margin: 0;
  margin-right: 25px;
}

.education-description h4{
  color: $active-color;
}

//Footer
.footer-container{
  width: 100%;
  background-color: $primary-color;
  padding-bottom: 10px;
}

@media (max-width: 800px) {
  .personal-image{
    width: 200px;
  }
}

